[project]
name = "gitnotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hircrown" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gitnotion = "gitnotion:main"

[build-system]
requires = ["uv_build>=0.8.1,<0.9.0"]
build-backend = "uv_build"
