[project]
name = "gitnotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hircrown" }
]
requires-python = ">=3.10"
dependencies = [
    "notion-client>=2.4.0",
    "typer>=0.16.0",
]

[project.scripts]
gitnotion = "gitnotion:main"

[build-system]
requires = ["uv_build>=0.8.1,<0.9.0"]
build-backend = "uv_build"
